# smart-comfyui-gallery

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE_DIAGRAM.md  ASSESSMENT_README.md  BUILD.md  CHANGELOG.md  CURRENT_STATE.md  DIAGNOSIS_AND_FIX.md  EXECUTIVE_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_DETAILED.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_STATUS_FINAL.md  IMPLEMENTATION_TEMPLATES.md  INSTALLATION.md  MIGRATION_ASSESSMENT.md  NEXT_IMPLEMENTATION_STEPS.md  NEXT_STEPS.md  OPTIMIZATION_RECOMMENDATIONS.md  PHASE1_SUMMARY.md  README.md  README_cleaned.md  REFACTOR_PLAN.md  SESSION_SUMMARY.md  SETUP_GUIDE.md  TAURI_MIGRATION.md  TUTORIAL.md  config.json.example  diagnostics_report.json  jsconfig.json  main.py  package.json  postcss.config.js  pyproject.toml  requirements.txt  smartgallery.py  (+5 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
.working-docs/: EXECUTIVE_SUMMARY.md  architecture-comparison.md  quick-reference-guide.md  standalone-migration-analysis.md
smartgallery-tauri/: IMPLEMENTATION_GUIDE.md  PROJECT_STATUS.md  README_TAURI.md  package-lock.json  package.json
smartgallery-tauri/src-tauri/: Cargo.toml  tauri.conf.json
smartgallery-tauri/src-tauri/src/: database.rs  lib.rs  main.rs  models.rs
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs
src/routes/: +layout.svelte  +page.svelte
tauri-sveltekit-main/: .gitignore  BUILD_GUIDE.md  CRITICAL_FIXES_APPLIED.md  CUSTOM_PROTOCOL_FIX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  PHASE_5_TESTING_GUIDE.md  PHASE_6_BUILD_GUIDE.md  PHASE_6_CONFIG_COMPLETE.md  QUICK_START.md  TAURI_MIGRATION_STATUS.md  TEST_RESULTS.md  package-lock.json  package.json  run-dev.ps1  run-dev.sh  run_automated_tests.sh  svelte.config.js  tauri-sveltekit-main.xml  tsconfig.json  vite.config.js
tauri-sveltekit-main/src-tauri/: Cargo.toml  tauri.conf.json
tauri-sveltekit-main/src-tauri/capabilities/: default.json
tauri-sveltekit-main/src-tauri/src/: cache.rs  commands.rs  config.rs  database.rs  errors.rs  lib.rs  models.rs  parser.rs  scanner.rs  security.rs  thumbnails.rs
tauri-sveltekit-main/src/lib/: api.ts  store.svelte.ts  store.ts  types.ts
tauri-sveltekit-main/src/lib/components/: FilterPanel.svelte  GalleryGrid.svelte  GalleryItem.svelte  Lightbox.svelte  SettingsPanel.svelte  (+4 more)
tauri-sveltekit-main/src/routes/: +layout.svelte  +page.svelte
tauri-sveltekit-main/test_data/: create_test_png.sh  test_database.sh
templates/: index.html
(+3 files in other folders)
